--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    .App {
+        text-align: center;
+    }
+    
+    .Foot {
+        position: flex-end;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        font-size: medium;
+        background-color: rgb(240, 240, 240);
+        text-align: center;
+        /* position: absolute; */
+    }
+    
+    @media (max-width:618px) {
+        .Foot {
+            /* position: fixed; */
+            bottom: 0;
+            /* margin-top: 3%; */
+            width: 100%;
+            top: 10vh;
+            position: relative;
+        }
+    }
+    
+    @media (min-width: 619px) {
+        .Foot {
+            position: fixed;
+            bottom: 0;
+            margin-top: 3%;
+            width: 100%;
+        }
+    }
