--- a/src/screens/admin.css
+++ b/src/screens/admin.css
@@ -26,3 +26,12 @@
     text-align: center;
     border-radius: 4%;
 }
+
+.div {
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
+
+.marg {
+    margin-bottom: 15%;
+}
